<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pokemon GSC Time Password Generator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="trainer_name">Name of Trainer</string>
    <string name="money">Money on Hand</string>
    <string name="trainer_id">Trainer ID</string>
    <string name="passwd">Password will appear here.</string>
    <string name="submit">Submit</string>
    <string name="question_mark">\?</string>
    <string name="help">Help</string>

</resources>