<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kylemsguy.pkmngsctimepass.MainActivity$PlaceholderFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/trainer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trainer_name"
            android:inputType="text" />

        <Button
            android:id="@+id/tname_help"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:action="helpTname"
            android:hint="@string/question_mark" />
    </LinearLayout>

    <EditText
        android:id="@+id/money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/money"
        android:inputType="number"
        android:value="0" />

    <EditText
        android:id="@+id/trainer_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trainer_id"
        android:inputType="number" />

    <EditText
        android:id="@+id/passwd_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwd"
        android:inputType="number" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/question_mark"
        android:onClick="submitAction" />

</LinearLayout>